--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='preconnect' href='https://fonts.googleapis.com'>
+  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+  <link rel='stylesheet' href='https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css'>
   <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-    rel="stylesheet">
+    href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
+    rel='stylesheet'>
+  <link href='/styles/notify.css' rel='stylesheet' type='text/css'>
+  <link href='/styles/password.css' rel='stylesheet' type='text/css'>
 
-  <title>Document</title>
+  <title>Inicio sesión - Novatadas Informática</title>
   <style>
     :root {
       line-height: 1.5;
@@ -28,7 +30,7 @@
     }
 
     * {
-      font-family: "DM Sans", Helvetica, Inter, system-ui, Avenir, Arial, sans-serif;
+      font-family: 'DM Sans', Helvetica, Inter, system-ui, Avenir, Arial, sans-serif;
       box-sizing: border-box;
     }
 
@@ -45,7 +47,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+      background: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
     }
 
     .login-container {
@@ -57,21 +59,9 @@
       text-align: center;
     }
 
-    .login-container h2 {
-      margin-top: 0;
-      margin-bottom: 1.5rem;
-      color: #20211d;
-    }
-
     .input-group {
       margin-bottom: 1rem;
       text-align: left;
-    }
-
-    .input-group label {
-      display: block;
-      margin-bottom: 0.5rem;
-      color: #20211d;
     }
 
     .input-group input {
@@ -82,31 +72,37 @@
       color: #20211d;
       border-radius: 5px;
       background-color: #fafafa;
+      outline: 0;
     }
 
     .input-group input:focus {
-      outline: 1.5px solid #484848;
+      border: 1px solid #357aa8;
     }
 
-    button {
+    .loginButton {
       width: 100%;
       padding: 0.75rem;
-      border: none;
-      border-radius: 5px;
-      background-color: #20211d;
-      font-size: 1rem;
+      border-radius: 7px;
+      color: #357aa8;
+      font-size: 1.2rem;
+
+      font-weight: bolder;
       cursor: pointer;
-      transition: background-color 0.2s ease;
+      background: linear-gradient(#fff, #fff) padding-box,
+        linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%) border-box;
+      border: 2px solid transparent;
     }
 
-    button:hover {
-      background-color: #ff8800;
-      color: black;
-      font-weight: 600;
+    .loginButton:hover {
+      color: white;
+      background: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%) padding-box,
+        linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%) border-box;
     }
 
-    button:active {
-      background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    .loginButton:active {
+      color: white;
+      background: linear-gradient(135deg, #5c86a2 0%, #6a6da6 100%) padding-box,
+        linear-gradient(135deg, #5c86a2 0%, #6a6da6 100%) border-box;
     }
 
     .loginError {
@@ -114,23 +110,65 @@
       color: #ff0f0f;
       font-size: .9rem;
     }
+
+    .title-session {
+      font-size: 2rem;
+      font-weight: bolder;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: .5rem;
+      background: -webkit-linear-gradient(#8BC6EC 0%, #9599E2 85%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      border-bottom: solid 1px rgba(255, 255, 255, 0.3);
+      padding-bottom: .7rem;
+      margin: 0 0 .7rem 0;
+    }
+
+    .label-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: .5rem;
+      color: #474747;
+      padding-bottom: .5rem;
+    }
   </style>
 </head>
 
 <body>
-  <div class="login-container">
-    <h2>Iniciar Sesión</h2>
-    <form id="login-form">
-      <div class="input-group">
-        <label for="username">Nombre de Usuario</label>
-        <input type="text" id="username" name="username" />
+
+  <div class='notify-container'>
+    <i id='notify-icon' class='fa-solid fa-triangle-exclamation fa-beat'></i>
+    <div class='notify-text'></div>
+  </div>
+
+  <div class='login-container'>
+    <h2 class='title-session'>Iniciar Sesión</h2>
+    <form id='login-form'>
+      <div class='input-group'>
+        <div class='label-container'>
+          <i class='fa-solid fa-id-card'></i>
+          <label for='username'>DNI</label>
+        </div>
+        <input type='text' id='username' name='username' />
       </div>
-      <div class="input-group">
-        <label for="password">Contraseña</label>
-        <input type="password" id="password" name="password" />
+      <div class='input-group'>
+        <div class='label-container'>
+          <i class='fa-solid fa-key'></i>
+          <label for='password'>Contraseña</label>
+        </div>
+        <div class='password-container'>
+          <input type='password' id='password' name='password' />
+          <button class='hide-password' type='button'>
+            <i class='fa-regular fa-eye'></i>
+          </button>
+        </div>
       </div>
-      <p class="loginError"></p>
-      <button type="submit">Iniciar sesión</button>
+      <button type='submit' class='loginButton'>Iniciar sesión</button>
     </form>
   </div>
   <script>
@@ -138,14 +176,17 @@
     const $ = (selector) => document.querySelector(selector)
 
     const loginForm = $('#login-form')
-    const errorText = $('.loginError')
+    const hidePassBtn = $('.hide-password')
+    const passwordInput = $('#password')
+
+    let hidePass = false
 
     loginForm?.addEventListener('submit', (event) => {
       event.preventDefault()
       const username = $('#username').value
       const password = $('#password').value
 
-      if (!username || !password) return errorText.textContent = 'Por favor, rellena todos los campos.'
+      if (!username || !password) return notify('Por favor, rellena todos los campos.', 1000)
 
       fetch('/login', {
         method: 'POST',
@@ -159,14 +200,71 @@
       })
         .then(res => res.json())
         .then((data) => {
-          console.log(data)
           if (data.err) {
-            errorText.textContent = data.err
+            notify(data.err, 1000)
           } else {
-            window.location.href = '/dashboard'
+            window.location.href = '/scoreboard'
           }
         })
     })
+
+    hidePassBtn.addEventListener('click', (event) => {
+      event.preventDefault()
+
+      hidePass = !hidePass
+
+      if (hidePass) {
+        $('.hide-password i').classList.remove('fa-eye')
+        $('.hide-password i').classList.add('fa-eye-slash')
+
+        passwordInput.type = 'text'
+      } else {
+        $('.hide-password i').classList.remove('fa-eye-slash')
+        $('.hide-password i').classList.add('fa-eye')
+
+        passwordInput.type = 'password'
+      }
+    })
+
+    let notifyTimeoutId
+    let notifyTimeoutId2
+
+    function notify(msg, time, type = 'error') {
+      const $ = (element) => document.querySelector(element)
+
+      const container = $('.notify-container')
+      const notifyText = $('.notify-text')
+      const notifyIcon = $('#notify-icon')
+
+      clearTimeout(notifyTimeoutId)
+      clearTimeout(notifyTimeoutId2)
+
+
+      notifyIcon.classList.remove('fa-solid', 'fa-triangle-exclamation', 'fa-beat')
+      notifyIcon.classList.remove('fa-solid', 'fa-check-circle')
+      notifyIcon.classList.add(...(type === 'error' ? ['fa-solid', 'fa-triangle-exclamation', 'fa-beat'] : ['fa-solid', 'fa-check-circle']))
+
+      notifyText.textContent = msg
+      container.classList.remove('success')
+      container.classList.remove('error')
+
+      container.classList.add(type)
+
+      container.style.animation = 'showNotify .5s'
+
+      notifyTimeoutId = setTimeout(() => {
+        container.style.animation = ''
+        container.style.opacity = 1
+      }, 500)
+
+      notifyTimeoutId2 = setTimeout(() => {
+        container.style.animation = 'hideNotify .5s'
+        setTimeout(() => {
+          container.style.animation = ''
+          container.style.opacity = 0
+        }, 500)
+      }, time + 500)
+    }
 
   </script>
 </body>
