--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     rel='stylesheet'>
   <link href='/styles/notify.css' rel='stylesheet' type='text/css'>
   <link href='/styles/password.css' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="/js/notify.js"></script>
 
   <title>Inicio sesión - Novatadas Informática</title>
   <style>
@@ -225,46 +226,6 @@
         passwordInput.type = 'password'
       }
     })
-
-    let notifyTimeoutId
-    let notifyTimeoutId2
-
-    function notify(msg, time, type = 'error') {
-      const $ = (element) => document.querySelector(element)
-
-      const container = $('.notify-container')
-      const notifyText = $('.notify-text')
-      const notifyIcon = $('#notify-icon')
-
-      clearTimeout(notifyTimeoutId)
-      clearTimeout(notifyTimeoutId2)
-
-
-      notifyIcon.classList.remove('fa-solid', 'fa-triangle-exclamation', 'fa-beat')
-      notifyIcon.classList.remove('fa-solid', 'fa-check-circle')
-      notifyIcon.classList.add(...(type === 'error' ? ['fa-solid', 'fa-triangle-exclamation', 'fa-beat'] : ['fa-solid', 'fa-check-circle']))
-
-      notifyText.textContent = msg
-      container.classList.remove('success')
-      container.classList.remove('error')
-
-      container.classList.add(type)
-
-      container.style.animation = 'showNotify .5s'
-
-      notifyTimeoutId = setTimeout(() => {
-        container.style.animation = ''
-        container.style.opacity = 1
-      }, 500)
-
-      notifyTimeoutId2 = setTimeout(() => {
-        container.style.animation = 'hideNotify .5s'
-        setTimeout(() => {
-          container.style.animation = ''
-          container.style.opacity = 0
-        }, 500)
-      }, time + 500)
-    }
 
   </script>
 </body>
