--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -26,7 +26,17 @@
     </nav>
   </header>
   <h1>Bienvenido <%= loggedUser.name %>, tienes <%= loggedUser.auraPoints %> puntos!</h1>
+  
   <div>
+    <% allChallenges.forEach((challenge, index) => { %>
+      <h2><%= challenge.title %></h2>
+      <p><%= challenge.description %></p>
+      <p><%= challenge.points %> puntos</p>
+      <form action="/challenges" method="POST">
+        <input type="hidden" name="challengeId" value="<%= challenge._id %>">
+        <input type="submit" value="Completar">
+      </form>
+    <% }) %>
   </div>
 </body>
 
