--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marcador - Novatadas Informática</title>
+  <title>Retos - Novatadas Informática</title>
+  <link
+    href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
+    rel='stylesheet'>
   <link href="/styles/navLayout.css" rel="stylesheet" type="text/css">
 
   <style>
@@ -26,17 +29,23 @@
     </nav>
   </header>
   <h1>Bienvenido <%= loggedUser.name %>, tienes <%= loggedUser.auraPoints %> puntos!</h1>
-  
+
   <div>
-    <% allChallenges.forEach((challenge, index) => { %>
-      <h2><%= challenge.title %></h2>
-      <p><%= challenge.description %></p>
-      <p><%= challenge.points %> puntos</p>
+    <% allChallenges.forEach((challenge, index)=> { %>
+      <h2>
+        <%= challenge.title %>
+      </h2>
+      <p>
+        <%= challenge.description %>
+      </p>
+      <p>
+        <%= challenge.points %> puntos
+      </p>
       <form action="/challenges" method="POST">
         <input type="hidden" name="challengeId" value="<%= challenge._id %>">
         <input type="submit" value="Completar">
       </form>
-    <% }) %>
+      <% }) %>
   </div>
 </body>
 
