feat: update navigation stylesheet and refactor auraPoints to points in scoreboard view

--- a/views/scoreboard.ejs
+++ b/views/scoreboard.ejs
@@ -8,7 +8,7 @@
   <link
     href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
     rel='stylesheet'>
-  <link href="/styles/navLayout.css" rel="stylesheet" type="text/css">
+  <link href="/styles/navigation.css" rel="stylesheet" type="text/css">
   <link href="/styles/table.css" rel="stylesheet" type="text/css">
   <style>
     tbody tr:nth-child(odd):hover {
@@ -62,7 +62,7 @@
               <%= user.name %>
             </td>
             <td>
-              <%= user.auraPoints %>
+              <%= user.points %>
             </td>
             <td>
               <%= user.challenges.length %>
